# hgmech

./: .dockerignore  Cargo.toml  README.md  dev.sh  index.html  index.scss  rules.md
.github/workflows/: ci.yml
crates/game/: Cargo.toml  build.rs
crates/game/src/: catalog.rs  catalog_csv.rs  combat.rs  dice.rs  lib.rs  line_of_sight.rs  scenario.rs  state.rs  terrain.rs  unit.rs
crates/game/tests/: combat_modifiers.rs  damage_and_crits.rs  heat_and_overheat.rs  line_of_sight.rs  movement.rs  todo.txt  turn_structure.rs  unit_card.rs
crates/game/tests/common/: mod.rs
crates/multiplayer_server/: Cargo.toml
crates/multiplayer_server/src/: Dockerfile  args.rs  main.rs  run.rs  state.rs  topology.rs
crates/ui/: Cargo.toml
crates/ui/src/: app.rs  battlefield.rs  force_select.rs  hud.rs  lib.rs  lobby.rs  net.rs  overlays.rs  unit_card.rs  unit_view.rs
data/: unit_list_20230906-001811.csv
data/maps/: demo.json
deploy/terraform/: README.md  acm.tf  alb.tf  app.tf  dns.tf  ecr.tf  ecs.tf  main.tf  outputs.tf  push-image.sh  terraform.tfvars.example  variables.tf  versions.tf
src/: main.rs
