[package]
name = "bt"
version = "0.1.0"
edition = "2021"
description = "battletech alphastrike in the web"
readme = "README.md"
repository = "https://github.com/Harry-George/bt.git"
license = "MIT OR Apache-2.0"

# The root crate is the WASM binary mounted by Trunk. It is a thin shell over the
# `ui` library; all logic lives in the workspace member crates below.
[dependencies]
ui = { path = "crates/ui" }
leptos = { version = "0.7", features = ["csr"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
tracing-web = "0.1"
console_error_panic_hook = "0.1"

[workspace]
members = ["crates/game", "crates/multiplayer_server", "crates/ui"]
resolver = "2"
