[package]
name = "ui"
version = "0.1.0"
edition = "2021"
description = "Leptos (CSR) presentation layer for the bt Alpha Strike game."
license = "MIT OR Apache-2.0"

[dependencies]
game = { path = "../game" }
leptos = { version = "0.7", features = ["csr"] }
web-sys = { version = "0.3.91", features = ["Window", "Document", "Element", "DomRect", "MouseEvent", "PointerEvent"] }
wasm-bindgen = "0.2.114"
js-sys = "0.3.91"
