[package]
name = "ui"
version = "0.1.0"
edition = "2021"
description = "Leptos (CSR) presentation layer for the bt Alpha Strike game."
license = "MIT OR Apache-2.0"

[dependencies]
game = { path = "../game" }
leptos = { version = "0.7", features = ["csr"] }
web-sys = { version = "0.3.91", features = ["Window", "Document", "Element", "DomRect", "MouseEvent", "PointerEvent"] }
wasm-bindgen = "0.2.114"
js-sys = "0.3.91"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"

# Multiplayer client: WebRTC peer connections brokered by the matchbox signaling
# server (see crates/multiplayer_server). Only ever built for the browser target;
# native builds (cargo test/check) use the stubs in `net.rs`.
[target.'cfg(target_arch = "wasm32")'.dependencies]
matchbox_socket = "0.14"
gloo-net = { version = "0.6", features = ["http"] }
wasm-bindgen-futures = "0.4"
